BLZT-39: add javadoc and small refactoring repository handlers.